SERVER-41042 fix early thread in NonAuthTE

The NonAuthTaskExecutor makes threads too early in global startup.  We
have to delay thread startup until after the signal handling thread to
avoid failing to mask that early thread from signals.